--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,12 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Belur\\": "src/Belur"
+            "Belur\\": "src/"
         }
     },
     "scripts": {
-        "tests": "phpunit --colors=always --testdox tests/"
+        "tests": "phpunit --colors=always --testdox tests/",
+        "php-cs-fixer": "php-cs-fixer fix --diff --config=.php-cs-fixer.php"
     },
     "autoload-dev": {
         "psr-4": {
@@ -23,6 +24,7 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "^12.5"
+        "phpunit/phpunit": "^11.0",
+        "friendsofphp/php-cs-fixer": "^3.92"
     }
 }
