--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Belur\\": "src/"
+            "Belur\\": "src/",
+            "App\\": "app/"
         },
         "files": [
             "src/Helpers/app.php",
@@ -32,5 +33,8 @@
     "require-dev": {
         "phpunit/phpunit": "^11.0",
         "friendsofphp/php-cs-fixer": "^3.92"
+    },
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
     }
 }
